--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="navbar-brand">
           <a href="index.html">
             <img
-              src="./public/images/Logo.png"
+              src="/images/Logo.png"
               alt="Logo.png"
               width="50%"
               height="auto"
